[add] update user
